--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/styles": "^4.0.0-alpha.1",
     "myscript": "^4.3.0",
     "react": "^16.8.1",
     "react-dev-utils": "^7.0.3",
